Fixed nav jumping due to display issue with logo.

--- a/assets/css/components/header.scss
+++ b/assets/css/components/header.scss
@@ -13,13 +13,16 @@
   .logo {
     margin: 0;
     padding: 0;
+    font-size: rem-calc(36);
     line-height: 1;
+    display: inline-block;
     a {
-      display: inline-block;
       font-family: 'Denmark';
-      font-size: rem-calc(36);
-      font-weight: 300;
+      font-size: inherit;
+      display: inline-block;
+      font-weight: normal;
       line-height: 60px;
+      height: 60px;
       color: #ccc;
     }
   }
